force-app/main/default/objects/Public_Fencing_Club__mdt/Public_Fencing_Club__mdt.object-meta.xml
<CustomObject>
    <description>Reviewed public directory references only. Never store participants, private records, credentials or unverified accessibility claims.</description>
    <label>Public Fencing Club</label>
    <pluralLabel>Public Fencing Clubs</pluralLabel>
</CustomObject>