force-app/main/default/objects/Public_Fencing_Club__mdt/fields/Club_Name__c.field-meta.xml
<CustomField>
    <fullName>Club_Name__c</fullName>
    <label>Club Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>