force-app/main/default/objects/Public_Fencing_Club__mdt/fields/Source_Checked_On__c.field-meta.xml
<CustomField>
    <fullName>Source_Checked_On__c</fullName>
    <label>Source Checked On</label>
    <type>Date</type>
</CustomField>