force-app/main/default/objects/Public_Fencing_Club__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>